[project]
name = "graph-websearch-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.3",
    "chainlit==1.1.202",
    "langchain-community==0.2.3",
    "langchain-core==0.2.4",
    "langchain-openai==0.1.8",
    "langgraph==0.0.64",
    "termcolor==2.4.0",
]
